--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 application-dev.yaml
-tmp/chat_memory/
+tmp/
 
 ### STS ###
 .apt_generated
