--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,10 @@
 <!--            <groupId>com.alibaba.cloud.ai</groupId>-->
 <!--            <artifactId>spring-ai-alibaba-starter-dashscope</artifactId>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-advisors-vector-store</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.ai</groupId>-->
+<!--            <artifactId>spring-ai-advisors-vector-store</artifactId>-->
+<!--        </dependency>-->
         <!-- Milvus 矢量数据库 -->
         <dependency>
             <groupId>org.springframework.ai</groupId>
